Fixed mobile menu overflow.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,7 +22,7 @@ $skill-size: 5rem;
     .menu {
         position: fixed;
         margin: 20px 20px;
-        width: 20px;
+        width: 100%;
         height: 20px;
         label {
             display: block;
@@ -49,8 +49,8 @@ $skill-size: 5rem;
             box-shadow: var(--shadow-elevation-medium);
             border-radius: 20px;
             transition: opacity 0.2s ease-out;
+            width: 80%;
             padding-left: 32px;
-            padding-right: 256px;
             a {
                 display: block;
                 text-decoration: none;
